modified some routes for improvements
