# routes/orders.js
@@ -4,12 +4,13 @@ const { cookieJwtAuth, isAdmin } = require("../middleware/cookieJWTAuth");
 
 module.exports = (app) => {
     app.use("/api/v2/orders", router);
+    router.get("/best-selling-products", orderController.bestSeller);
+    router.post("/order-fulfilled", cookieJwtAuth, orderController.newCompleteOrder); // sameUserCheck // done // query ?user=id&cart=id
 
     router.get("/", isAdmin, orderController.findAllOrders);
-    router.post("/:user_id/:cart_id", orderController.newCompleteOrder); // sameUserCheck // done
     router.get("/:id", cookieJwtAuth, orderController.findAnOrder); // sameUserCheck // done
     router.put("/:id", isAdmin, orderController.updateAnOrder);
 
-    // limit this to super admin
+    // limit this to super admin //
     router.delete("/:id", isAdmin, orderController.removeOrder);
 }
